# llm-rpg-server

./: .gitignore  AGENT.md  COMBAT_SYSTEM.md  FRONTEND_MIGRATION.md  GROWTH_SYSTEM.md  NPC_SYSTEM.md  README.md  SKILL_SYSTEM.md  WORLD_SYSTEM.md  agent_nodes.py  config_loader.py  craft.py  export_configs.py  fight.py  game_configs.json  game_configs.xlsx  map_system.py  models_and_state.py  npc_dialogue.py  npc_interaction.py  npc_models.py  npc_seed.py  pyproject.toml  server.py  test_npc_system.py  world_repository.py
configs/catalog/: default_player.json  game.json  generated_items.json  races.json
configs/combat/: rules.json
configs/crafting/: categories.json
configs/maps/: encounters.json  world.json
configs/monsters/: world_monsters.json
configs/narratives/: zh-CN.json
configs/npcs/: demo_npcs.json  interaction_rules.json
configs/progression/: rules.json
configs/prompts/: combat_effectiveness.json  combat_judge.json  crafting.json  crafting_concept.json  crafting_image.json  crafting_properties_armor.json  crafting_properties_bomb.json  crafting_properties_food.json  crafting_properties_material.json  crafting_properties_potion.json  crafting_properties_utility.json  crafting_properties_weapon.json  environment_hazard.json  npc_dialogue.json
configs/skills/: skills.json
scripts/: export_catalog.py  validate_content.py
src/llm_rpg_server/: __init__.py  bootstrap.py  main.py
tests/: conftest.py
tests/integration/: test_bootstrap.py  test_combat_resources.py  test_crafting_api.py
tests/unit/: test_chronicle.py  test_combat_rules.py  (+12 more)
(+68 files in other folders)
