[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llm-rpg-server"
version = "3.0.0"
description = "A modular RPG server with deterministic rules and LLM-assisted narrative."
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.7,<3",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "langchain-core>=1.4.9,<2",
    "langchain-openai>=1.3.5,<2",
    "langfuse>=3,<4",
    "langgraph>=1.2.9,<2",
    "langgraph-checkpoint>=4.1.1,<5",
    "openai>=2.45,<3",
    "openpyxl>=3.1,<4",
    "pillow>=10,<12",
    "pydantic>=2.10,<3",
    "python-dotenv>=1.0,<2",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.11,<1",
]

[project.scripts]
llm-rpg-server = "llm_rpg_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_rpg_server"]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "llm_rpg_server/configs"

[tool.hatch.build.targets.sdist]
include = ["src/llm_rpg_server", "configs", "scripts", "README.md", "AGENT.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
